@@ -675,15 +675,13 @@ ihA raptor-utils                    - Raptor RDF Parser utilities</screen>
 
 	<listitem>
 	  <para>
-	    Displays detailed information about one or more packages,
-	    listed following the search command.  If a package name
-	    contains a tilde character
+	    Displays detailed information about one or more packages.  If a
+	    package name contains a tilde character
 	    (<quote><literal>~</literal></quote>) or a question mark
-	    (<quote><literal>?</literal></quote>), it will be treated
-	    as a search pattern and all matching packages will be
-	    displayed (see the section <quote><link
-	    linkend='secSearchPatterns'>Search Patterns</link></quote>
-	    in the &aptitude; reference manual).
+	    (<quote><literal>?</literal></quote>), it will be treated as a
+	    search pattern and all matching packages will be displayed (see the
+	    section <quote><link linkend='secSearchPatterns'>Search
+	    Patterns</link></quote> in the &aptitude; reference manual).
 	  </para>
 
 	  <para>
