@@ -7,6 +7,11 @@
 
 - Bug fixes:
 
+- Documentation:
+
+  * Improve description and fix typo for the "show" command in man page, thanks
+    Regid Ichira (Closes: #692173)
+
 - Translation updates:
 
   * Fix inconsistent German translations (Closes: #720186)
